feat: desktop view responsiveness

--- a/restaurant.html
+++ b/restaurant.html
@@ -39,10 +39,16 @@
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
       <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <div class="restaurant-info-box">
+        <div class="r-box">
+          <img id="restaurant-img">
+          <p id="restaurant-cuisine"></p>
+        </div>
+        <div class="r-box">
+          <p id="restaurant-address"></p>
+          <table id="restaurant-hours"></table>
+        </div>
+      </div>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
