--- a/restaurant.html
+++ b/restaurant.html
@@ -14,6 +14,7 @@
 </head>
 
 <body class="inside">
+  <a href="#restaurant-container" class="skip-link">Skip to content</a>
   <!-- Beginning header -->
   <header>
     <!-- Beginning nav -->
